# internal/adapter/handler/dto/order.go
@@ -1,12 +1,12 @@
 package dto
 
 type ProductItem struct {
-	ID       string `json:"id"`
-	Quantity int64  `json:"quantity"`
+	ID          string `json:"id"`
+	Quantity    int64  `json:"quantity"`
+	ProductName string `json:"product_name" swaggerignore:"true"`
 }
 
 type CreateOrderRequest struct {
 	Client   string        `json:"client"`
 	Products []ProductItem `json:"products"`
-	Status   int           `json:"status"`
 }
